# mcp-ripgrep

./: .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml
ai/: governance.md  primer.md
ai/ael/: config.yaml
ai/profiles/: claude.md
ai/workspace/design/: design-mcp-ripgrep-master.md
ai/workspace/prompt/: prompt-8057f3c0-implement-mcp-ripgrep.md
ai/workspace/requirements/: requirements-ca02a3db-mcp-ripgrep.md
ai/workspace/trace/: trace-traceability-matrix-master.md
docs/: README.md  obsidian_markdown_guidelines.md
src/: README.md
src/mcp_ripgrep/: __init__.py  __main__.py  errors.py  models.py  parser.py  ripgrep.py  server.py
tests/: README.md  test_parser.py  test_ripgrep.py  test_server.py
